@@ -1,3 +1,4 @@
+- stats not returned from map reduce with inline results (Issue #542)
 - Re-enable testing of whether or not the callback is called in the multi-chunk seek, fix small GridStore bug (Issue #543, https://github.com/pgebheim)
 
 0.9.9.6 2012-03-12
